update:fix overflow bug

--- a/source/css/index.less
+++ b/source/css/index.less
@@ -32,6 +32,8 @@
   border-right: black;
   transition: 0.3s cubic-bezier(0.25, 0.1, 0.25, 1);
   // background: skyblue !important;
+  // 提高优先级, 防止被覆盖无法拖动
+  z-index: 10;
 }
 .custom-resizable .react-resizable-handle:hover {
   background-color: #90caf9 !important;
@@ -48,13 +50,18 @@ body {
   height: 100svh;
   overflow-x: hidden;
   overflow-y: auto;
+  
+  // 隐藏全局滚动条
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
 #root {
   width: 100svw;
   height: 100svh;
 }
 #view-area {
-  overflow-y: scroll;
+  overflow-y: auto;
   width: 100%;
   height: 90svh;
   /* 设置 transform 让当前容器为包含块 */
@@ -91,7 +98,7 @@ tr:hover {
   background: #fffdd6 !important;
 }
 
-// @region*********************hljs
+  // @region*********************hljs
 /**
 @my hljs
 */
@@ -199,6 +206,29 @@ pre code.hljs {
 }
 
 // Markdown github
+/* Markdown Compatibility - Markdown渲染补丁
+该补丁的作用是调整容器的显示, 让局部滚动条固定在页面右边, 而不是跟随内容区域的拖动而拖动.
+*/
+article.markdown-body {
+  max-width: none;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  
+  // 设置所有子节点的宽度, 以匹配之前的样式
+  // 即最小100px宽度, 最大980px宽度
+  & > * {
+    width: 100%;
+    min-width: 200px;
+    max-width: 980px;
+  }
+  
+  // 防止代码块的高度发生异常
+  pre {
+    overflow: unset;
+  }
+}
+
 .markdown-body .footnotes {
   border-top: none !important;
 }
